# demo-app-python

./: pyproject.toml  requirements.txt  run_uvicorn.py  vercel.json
api/: index.py  requirements.txt
app/: __init__.py  database.py
app/api/: hr.py
app/schemas/: cv_evaluation.py
app/services/: hr_service.py
app/utils/: embeddings.py  file_processor.py  job_store.py  openai_client.py
